--- a/app.json
+++ b/app.json
@@ -24,10 +24,12 @@
     "pages/production/live/live",
     "pages/production/capital/capital",
     "pages/customer/customer",
-    "pages/order/order",
+    "pages/supply/supply",
+    "pages/customer/confirmation/confirmation",
     "pages/customer/returns/returns",
     "pages/customer/logistics/logistics",
     "pages/customer/evaluate/evaluate",
+    "pages/customer/statistics/statistics",
     "pages/customer/communication/communication",
     "pages/customer/statement/statement",
     "util/wxchat/wxchat",
