--- a/app.json
+++ b/app.json
@@ -80,6 +80,7 @@
         "f_Role/f_Role",
         "adjustment/adjustment",
         "accounting/accounting",
+        "myshare/myshare",
         "distributor/distributor",
         "distribution/distribution",
         "packing/packing",
