--- a/project.config.json
+++ b/project.config.json
@@ -2,13 +2,13 @@
 	"description": "项目配置文件。",
 	"setting": {
 		"urlCheck": true,
-		"es6": true,
+		"es6": false,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.9",
+	"libVersion": "2.1.0",
 	"appid": "wxfbbbc7b7f73ae7fb",
 	"projectname": "%E5%88%9B%E4%B8%9A%E6%9C%8D%E5%8A%A1",
 	"condition": {
